# Zero-Touch-QA

./: .env.example  .gitignore  README.md  WORKFLOW_ARCHITECTURE.md  demo_wrike_integration.py  langgraph.json  pyproject.toml  run_qa_workflow.py
qa_agent/: __init__.py  orchestrator.py  playwright_mcp.py  workspace.py  wrike_integration.py
qa_agent/agents/: __init__.py  planner.py  runner.py
test_application/Application_1/: README.md  index.html  main.js  server.py
test_application/react-vet-clinic-dashboard/: README.md  index.html  package-lock.json  package.json
test_application/react-vet-clinic-dashboard/src/: App.tsx  main.tsx  store.ts  theme.ts
test_application/react-vet-clinic-dashboard/src/components/: ConfirmDialog.tsx  Error.tsx  PatientChart.tsx  PatientDetailItem.tsx  PatientDetailPage.tsx  PatientDetails.tsx  PatientForm.tsx  PatientsList.tsx
test_application/react-vet-clinic-dashboard/src/types/: index.ts
